# niter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  NOTICE.txt  README.md
debug/: Makefile
debug/src/: main.nit
sandbox/: Makefile
sandbox/src/: main.nit  sample.nit
src/: main.cpp
src/checker/: environment.cpp  environment.h  global_checker.cpp  global_checker.h  local_checker.cpp  local_checker.h  node.cpp  node.h  scope.h  type.h
src/codegen/: code_generator.cpp  code_generator.h  emitter.cpp  emitter.h  optimizer.cpp  optimizer.h
src/compiler/: compiler.cpp  compiler.h
src/logger/: error_code.h  logger.cpp  logger.h
src/parser/: annotation.h  ast_printer.cpp  ast_printer.h  decl.h  expr.cpp  expr.h  parser.cpp  parser.h  stmt.cpp  stmt.h
src/pipeline/: pipeline.h
src/scanner/: scanner.cpp  scanner.h  token.cpp  token.h
src/unused/: scope.h  type.h
src/utility/: core.cpp  core.h  decl.h  dictionary.h  expr.cpp  expr.h  node.cpp  node.h  stmt.h  type.h  utils.h
test/: checker_flow_test.cpp  checker_fun_test.cpp  checker_struct_test.cpp  checker_test.cpp  compiler_test.cpp  parser_decl_test.cpp  parser_expr_test.cpp  parser_flow_test.cpp  scanner_test.cpp  test.cpp
